# digikam

./: .clazy  .cppcheck  .craft.ini  .gitattributes  .gitignore  .gitlab-ci.yml  .gitslave  .kde-ci.yml  .krazy  .scan-build  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  Mainpage.dox  Messages.sh  NEWS  PACKAGING  README.BUNDLES  README.md  TODO.Qt6  TODO.merge_master  bootstrap-vcpkg.sh  bootstrap.homebrew  bootstrap.linux  bootstrap.local  bootstrap.macports  bootstrap.mxe  bootstrap.qt6  bootstrap.tarball  bootstrap.vcpkg  download-repos  git2cl  gits  gitup  snapcraft.yaml
core/: CMakeLists.txt  DigikamExportAPI.cmake
core/app/: CMakeLists.txt  DigikamCoreTarget.cmake  DigikamDatabaseTarget.cmake  DigikamExportAPI.cmake  DigikamGuiTarget.cmake  DigikamTarget.cmake
core/app/date/: datefolderview.cpp  datefolderview.h  ddateedit.cpp  ddateedit.h  ddatepicker.cpp  ddatepicker.h  ddatepicker_p.cpp  ddatepicker_p.h  ddatepickerpopup.cpp  ddatepickerpopup.h  ddatetable.cpp  ddatetable.h  ddatetable_p.cpp  ddatetable_p.h  ddatetimeedit.cpp  ddatetimeedit.h  dpopupframe.cpp  dpopupframe.h  monthwidget.cpp  monthwidget.h  timelinewidget.cpp  timelinewidget.h
core/app/dragdrop/: albumdragdrop.cpp  albumdragdrop.h  ddragobjects.cpp  ddragobjects.h  importdragdrop.cpp  importdragdrop.h  itemdragdrop.cpp  itemdragdrop.h  tagdragdrop.cpp  tagdragdrop.h
core/app/filters/: filtersidebarwidget.cpp  filtersidebarwidget.h  tagfilterview.cpp  tagfilterview.h
core/app/main/: digikam.notifyrc  digikamapp.cpp  digikamapp.h  digikamapp_camera.cpp  digikamapp_config.cpp  digikamapp_import.cpp  digikamapp_p.h  digikamapp_setup.cpp  digikamapp_solid.cpp  digikamapp_tools.cpp  digikamui5.rc  main.cpp  org.kde.digikam.appdata.xml  org.kde.digikam.desktop  windows_stub_main.cpp
core/app/utils/: digikam_config.h.cmake.in  digikam_dbconfig.h.cmake.in  digikam_debug.cpp  digikam_debug.h  digikam_export.h  digikam_globals.cpp  digikam_globals.h  digikam_globals_bundles.cpp  digikam_globals_p.h  digikam_opencv.h.cmake.in  digikam_version.cpp  digikam_version.h.cmake.in
core/avplayer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  org.kde.avplayer.appdata.xml
core/avplayer/config/: AVFilterConfigPage.cpp  AVFilterConfigPage.h  AVFormatConfigPage.cpp  AVFormatConfigPage.h  AVPlayerConfigMngr.cpp  AVPlayerConfigMngr.h  CaptureConfigPage.cpp  CaptureConfigPage.h  ConfigDialog.cpp  ConfigDialog.h  ConfigManager.cpp  ConfigManager.h  ConfigPageBase.cpp  ConfigPageBase.h  DecoderConfigPage.cpp  DecoderConfigPage.h  MiscPage.cpp  MiscPage.h  PropertyEditor.cpp  PropertyEditor.h  ShaderPage.cpp  ShaderPage.h  VideoEQConfigPage.cpp  VideoEQConfigPage.h
core/avplayer/filters/: AVFilterSubtitle.cpp  AVFilterSubtitle.h  EventFilter.cpp  EventFilter.h  OSD.cpp  OSD.h  OSDFilter.cpp  OSDFilter.h
core/avplayer/main/: MainWindow.cpp  MainWindow.h  MainWindow_io.cpp  MainWindow_p.cpp  MainWindow_p.h  MainWindow_setup.cpp  main.cpp  org.kde.avplayer.appdata.xml  org.kde.avplayer.desktop  windows_stub_main.cpp
core/avplayer/playlist/: PlayList.cpp  PlayList.h  PlayListDelegate.cpp  PlayListDelegate.h  PlayListItem.cpp  PlayListItem.h  PlayListModel.cpp  PlayListModel.h
core/avplayer/theme/: theme.qrc
core/avplayer/utils/: ClickableMenu.cpp  ClickableMenu.h  ConfigDialog.cpp  ConfigDialog.h  EventFilter.cpp  EventFilter.h  ScreenSaver.cpp  ScreenSaver.h  Slider.cpp  Slider.h  StatisticsView.cpp  StatisticsView.h  common.cpp  common.h  qoptions.cpp  qoptions.h
core/cmake/macros/: MacroBoolTo01.cmake  MacroBuildDateHeader.cmake  MacroCompiler.cmake  MacroDPlugins.cmake  MacroGitHeader.cmake  MacroJPEG.cmake  MacroOpenCV.cmake  MacroOpenMP.cmake  MacroSSE.cmake  MacroSanitizers.cmake  MacroUtils.cmake
core/cmake/modules/: DNGSdkRules.cmake  FindASS.cmake  FindD3D11.cmake  FindDirect2D.cmake  FindDirectSound.cmake  FindDirectX.cmake  FindEigen3.cmake  FindFFmpeg.cmake  FindGDI.cmake  FindGDIPLUS.cmake  FindGLIB2.cmake  FindGphoto2.cmake  FindHEIF.cmake  FindImageMagick.cmake  FindLCMS2.cmake  FindLQR-1.cmake  FindLensFun.cmake  FindLibheif.cmake  FindLibjxl.cmake  FindMarble.cmake  FindOpenSLES.cmake  FindPortaudio.cmake  FindPulseAudio.cmake  FindQtAV.cmake  FindVAAPI.cmake  FindVDPAU.cmake  FindX265.cmake  FindXAudio2.cmake  MacroBoolTo01.cmake  MacroBuildDateHeader.cmake  MacroCompiler.cmake  MacroDPlugins.cmake  MacroGitHeader.cmake  MacroInstallPaths.cmake  MacroJPEG.cmake  MacroOpenCV.cmake  MacroOpenMP.cmake  MacroSanitizers.cmake  MacroUtils.cmake  SanitizerRules.cmake
core/cmake/rules/: RulesDNGSdk.cmake  RulesDoxygen.cmake  RulesFFmpeg.cmake  RulesFindQtCore.cmake  RulesInstallPaths.cmake  RulesKDEFramework.cmake  RulesLibExiv2.cmake  RulesLibJpeg.cmake  RulesLibMagick.cmake  RulesLibOpenCV.cmake  RulesLibOpenGL.cmake  RulesLibgphoto2.cmake  RulesLiblensfun.cmake  RulesLibraw.cmake  RulesMacOS.cmake  RulesMediaPlayer.cmake  RulesOptionDefinitions.cmake  RulesQtFramework.cmake  RulesWindows.cmake  RulesX11.cmake
core/cmake/templates/: AVPlayerInfo.plist.cmake.in  DigikamInfo.plist.cmake.in  DigikamPluginConfig.cmake.in  Info.plist.cmake.in  ShowfotoInfo.plist.cmake.in  builddate.h.cmake.in  builddatescript.cmake.in  digikam.exe.manifest.cmake.in  gitscript.cmake.in  gitversion.h.cmake.in  showfoto.exe.manifest.cmake.in  versioninfo.rc.cmake.in
core/data/: CMakeLists.txt
core/data/about/: CMakeLists.txt  main.html
core/data/applications/: CMakeLists.txt  art.desktop  darktable.desktop  dxo6.desktop  dxo7.desktop  faststone.desktop  gimp210.desktop  irfanview32.desktop  irfanview64.desktop  mspaint.desktop  pspro2023.desktop  rawtherapee.desktop  showfoto.desktop  vlc.desktop  wmplayer.desktop  xnview.desktop  xnviewmp.desktop
core/data/colorschemes/: CMakeLists.txt
core/data/database/: CMakeLists.txt  dbconfig.xml.cmake.in  mysql-global.conf
core/dplugins/: CMakeLists.txt  TODO
core/libs/: CMakeLists.txt
core/showfoto/: CMakeLists.txt
core/tests/: CMakeLists.txt  README  TestDataDir.h  dtestdatadir.h
core/utilities/: CMakeLists.txt
(+9442 files in other folders)
